force-app/main/default/objects/DataLoad_ApplicationV2__c/DataLoad_ApplicationV2__c.object-meta.xml
<CustomObject>
    <description>Temporary object to hold Application V2</description>
    <label>DataLoad ApplicationV2</label>
    <nameField>
        <label>RowNum</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataLoad ApplicationV2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>