force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Added_By__c.field-meta.xml
<CustomField>
    <fullName>Added_By__c</fullName>
    <label>Added By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>