force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Added_By_Active__c.field-meta.xml
<CustomField>
    <fullName>Added_By_Active__c</fullName>
    <label>Added By Active?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>