force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Added_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Added_By_ID__c</fullName>
    <label>Added By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>