force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>