force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <label>Date Added</label>
    <type>DateTime</type>
</CustomField>