force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Employee_type__c.field-meta.xml
<CustomField>
    <fullName>Employee_type__c</fullName>
    <label>Employee type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>