force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/iLabor_Candidate_Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>iLabor_Candidate_Submission_ID__c</fullName>
    <label>iLabor Candidate Submission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>