force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <label>Job Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>