force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Job_Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Submission_ID__c</fullName>
    <externalId>true</externalId>
    <label>Job Submission ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>