force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Concat Job ID - Candidate ID</description>
    <inlineHelpText>Concat Job ID - Candidate ID</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>