force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Previous__c.field-meta.xml
<CustomField>
    <fullName>Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous</label>
    <referenceTo>DataLoad_ApplicationV2__c</referenceTo>
    <relationshipLabel>DataLoad ApplicationV2</relationshipLabel>
    <relationshipName>DataLoad_ApplicationV2</relationshipName>
    <type>Lookup</type>
</CustomField>