force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Previous_Key__c.field-meta.xml
<CustomField>
    <fullName>Previous_Key__c</fullName>
    <formula>Previous__r.Key__c</formula>
    <label>Previous Key</label>
    <type>Text</type>
</CustomField>