force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Status__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>