force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If records has been processed</description>
    <inlineHelpText>If records has been processed</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>