force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Highest to Lowest</description>
    <inlineHelpText>Highest to Lowest</inlineHelpText>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>