force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_ID__c</fullName>
    <label>SFDC ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>