force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Submission_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Submission_Bill_Rate__c</fullName>
    <label>Submission Bill Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>