force-app/main/default/objects/DataLoad_ApplicationV2__c/fields/Submission_Salary__c.field-meta.xml
<CustomField>
    <fullName>Submission_Salary__c</fullName>
    <label>Submission Salary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>