force-app/main/default/objects/DataLoad_ApplicationV2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Submission_ID__c</columns>
    <columns>LOB__c</columns>
    <columns>Added_By_ID__c</columns>
    <columns>Added_By_Name__c</columns>
    <columns>Added_By_Active__c</columns>
    <columns>Added_By__c</columns>
    <columns>Job_Order__c</columns>
    <columns>Candidate_ID__c</columns>
    <columns>Candidate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>