force-app/main/default/objects/DataLoad_ApplicationV2__c/listViews/All_Records_Not_Rank_1.listView-meta.xml
<ListView>
    <fullName>All_Records_Not_Rank_1</fullName>
    <columns>NAME</columns>
    <columns>Rank__c</columns>
    <columns>Process_Status__c</columns>
    <columns>Error__c</columns>
    <columns>SFDC_ID__c</columns>
    <columns>Previous__c</columns>
    <columns>Added_By__c</columns>
    <columns>Candidate__c</columns>
    <columns>Date_Added__c</columns>
    <columns>Job_Order__c</columns>
    <columns>Key__c</columns>
    <columns>Processed__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rank__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>All Records - Not Rank 1</label>
    <language>en_US</language>
</ListView>